# kaiser

./: .travis.yml  Cargo.toml  README.md
data/: quadgram_scores.raw
src/: buffer.rs  char.rs  heuristic.rs  lib.rs  main.rs  metaheuristic.rs  score.rs  stats.rs
src/ciphers/: affine.rs  caesar.rs  mod.rs  substitution.rs  transposition.rs  vigenere.rs
src/meta/: brute.rs  hillclimb.rs  mod.rs
