[package]
name = "kaiser"
version = "0.1.0"
authors = ["Matt Taylor"]
edition = "2018"
description = "Classical cipher cryptanalysis tool"
repository = "https://github.com/64/kaiser"
readme = "README.md"
license = "GPL-3.0-only"

[lib]
name = "kaiser"
path = "src/lib.rs"
test = true
doc = true

[dependencies]
clap = "2.32.0"
simple-error = "0.1.12"
smallvec = "0.6.7"
itertools = "0.8.0"
lazy_static = "1.2.0"
