[package]
name = "kaiser"
version = "0.1.3"
authors = ["Matt Taylor"]
edition = "2018"
description = "Classical cipher cryptanalysis tool"
repository = "https://github.com/64/kaiser"
readme = "README.md"
license = "GPL-3.0-only"

[dependencies]
clap = "2.32.0"
simple-error = "0.1.13"
smallvec = "0.6.8"
itertools = "0.8.0"
lazy_static = "1.2.0"
scan_fmt = "0.1.3"
rand = "0.6.5"
float-ord = "0.2.0"

[badges]
travis-ci = { repository = "64/kaiser", branch = "master" }
